--- a/Documentation/Languages/frFR.xaml
+++ b/Documentation/Languages/frFR.xaml
@@ -193,7 +193,7 @@
     <system:String x:Key="Welcome" xml:space="preserve">Bienvenue dans l’éditeur de sorts WoW.&#x0a;&#x0a;Souhaitez-vous utiliser la version locale de l’éditeur (SQLite) ou vous connecter à un serveur (MySQL)?</system:String>
     <system:String x:Key="Exit" xml:space="preserve">Êtes-vous sûr de vouloir quitter?&#x0a;&#x0a;Assurez-vous d’avoir enregistré avant d’effectuer cette action, sinon tout votre progrès sera perdu !</system:String>
     <system:String x:Key="TruncateTable1">ÊTES-VOUS SÛR ?</system:String>
-    <system:String x:Key="TruncateTable2" xml:space="preserve">Si vous tronquez la table, TOUTES les données des tables SQL seront supprimées.&#x0a;&#x0a;Cette fonctionnalité ne doit être utilisée que lorsque vous souhaitez réinitialiser les tables et importer de nouvelles DBC.</system:String>
+    <system:String x:Key="TruncateTable2" xml:space="preserve">This will drop all SQL tables used by this program and create them again allowing you to start over.&#x0a;&#x0a;This feature should only be used when you want to reset the tables and import new DBC files.</system:String>
     <system:String x:Key="CopySpellRecord1">Copier d'un sort existant ?</system:String>
     <system:String x:Key="CopySpellRecord2">Entrez l'identifiant du sort pour copier.</system:String>
     <system:String x:Key="CopySpellRecord3">ERREUR: L'identifiant du sort saisi n'était pas un entier.</system:String>
