--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -617,16 +617,17 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
                     <Label Content="Selected Visual ID" Grid.Row="1" Grid.Column="0" Margin="10,5,10,5"/>
                     <Label Name="SelectedVisualPath" Grid.Row="1" Grid.Column="1" Margin="10,5,10,5"/>
-                    <Label Content="Head Effect" Grid.Row="2" Grid.Column="0" Margin="10,5,10,5"/>
+                    <!--<Label Content="Head Effect" Grid.Row="2" Grid.Column="0" Margin="10,5,10,5"/>
                     <Label Name="HeadEffectPath" Grid.Row="2" Grid.Column="1" Margin="10,5,10,5"/>
                     <Label Content="Chest Effect" Grid.Row="3" Grid.Column="0" Margin="10,5,10,5"/>
                     <Label Name="ChestEffectPath" Grid.Row="3" Grid.Column="1" Margin="10,5,10,5"/>
@@ -641,7 +642,48 @@
                     <Label Content="Left Weapon Effect" Grid.Row="8" Grid.Column="0" Margin="10,5,10,5"/>
                     <Label Name="LeftWeaponEffectPath" Grid.Row="8" Grid.Column="1" Margin="10,5,10,5"/>
                     <Label Content="Right Weapon Effect" Grid.Row="9" Grid.Column="0" Margin="10,5,10,5"/>
-                    <Label Name="RightWeaponEffectPath" Grid.Row="9" Grid.Column="1" Margin="10,5,10,5"/>
+                    <Label Name="RightWeaponEffectPath" Grid.Row="9" Grid.Column="1" Margin="10,5,10,5"/>-->
+                    <Grid Name="VisualSettingsGrid" Grid.Row="2" Grid.RowSpan="12" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350"/>
+                    <Grid Name="VisualSettingsEditorGrid" Grid.Row="1" Grid.RowSpan="13" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Start Animation Id" Grid.Row="1" Grid.Column="0" Margin="10,30,10,5"/>
+                        <TextBox Name="StartAnimIdTxt" Grid.Row="1" Grid.Column="1" Margin="10,30,10,5"/>
+                        <Label Content="Animation Id" Grid.Row="2" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="AnimationIdTxt" Grid.Row="2" Grid.Column="1" Margin="10,5,10,5"/>
+                        <Label Content="Special Effect 1" Grid.Row="3" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="SpecialEffect1Txt" Grid.Row="3" Grid.Column="1" Margin="10,5,10,5"/>
+                        <Label Content="Special Effect 2" Grid.Row="4" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="SpecialEffect2Txt" Grid.Row="4" Grid.Column="1" Margin="10,5,10,5"/>
+                        <Label Content="Special Effect 3" Grid.Row="5" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="SpecialEffect3Txt" Grid.Row="5" Grid.Column="1" Margin="10,5,10,5"/>
+                        <Label Content="World Effect" Grid.Row="1" Grid.Column="2" Margin="10,30,10,5"/>
+                        <TextBox Name="WorldEffectTxt" Grid.Row="1" Grid.Column="3" Margin="10,30,10,5"/>
+                        <Label Content="Sound Id" Grid.Row="2" Grid.Column="2" Margin="10,5,10,5"/>
+                        <TextBox Name="SoundIdTxt" Grid.Row="2" Grid.Column="3" Margin="10,5,10,5"/>
+                        <Label Content="Shake Id" Grid.Row="3" Grid.Column="2" Margin="10,5,10,5"/>
+                        <TextBox Name="ShakeIdTxt" Grid.Row="3" Grid.Column="3" Margin="10,5,10,5"/>
+                        <Label Content="Flags" Grid.Row="4" Grid.Column="2" Margin="10,5,10,5"/>
+                        <TextBox Name="VisualFlagsTxt" Grid.Row="4" Grid.Column="3" Margin="10,5,10,5"/>
+                    </Grid>
                 </Grid>
             </TabItem>
         </TabControl>
