--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -611,13 +611,6 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -626,10 +619,13 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Content="Selected Visual ID" Grid.Row="1" Grid.Column="0" Margin="5,5,0,0" FontSize="18"/>
-                    <Label Name="SelectedVisualPath" Grid.Row="1" Grid.Column="1" Margin="0,5,0,5" FontSize="18"/>
-                    <Grid Name="VisualSettingsGrid" Grid.Row="2" Grid.RowSpan="12" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350"/>
-                    <Grid Name="VisualSettingsEditorGrid" Grid.Row="1" Grid.RowSpan="13" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500">
+                    <Label Content="Selected Visual ID" Grid.Row="0" Grid.Column="0" Margin="5,5,0,0" FontSize="16"/>
+                    <Label Name="SelectedVisualPath" Grid.Row="0" Grid.Column="1" Margin="0,5,0,5" FontSize="16"/>
+                    <Label Content="Visual Kits" Grid.Row="1" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Center"/>
+                    <Grid Name="VisualSettingsGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350" Margin="10,40,10,10"/>
+                    <Label Content="Visual Kit Effects" Grid.Row="3" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Center"/>
+                    <Grid Name="VisualEffectsListGrid" Grid.Row="4" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350" Margin="10,10,10,10"/>
+                    <Grid Name="VisualSettingsEditorGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
@@ -676,6 +672,8 @@
                         <TextBox Name="ShakeIdTxt" Grid.Row="3" Grid.Column="3" Margin="10,5,10,5" MinWidth="50"/>
                         <Label Content="Flags" Grid.Row="4" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="VisualFlagsTxt" Grid.Row="4" Grid.Column="3" Margin="10,5,10,5" MinWidth="50"/>
+                    </Grid>
+                    <Grid Name="VisualKitEffectEditorGrid" Grid.Row="3" Grid.RowSpan="2" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500">
                     </Grid>
                 </Grid>
             </TabItem>
