--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -625,7 +625,7 @@
                     <Grid Name="VisualSettingsGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350" Margin="10,40,10,10"/>
                     <Label Content="Visual Kit Effects" Grid.Row="3" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Center"/>
                     <Grid Name="VisualEffectsListGrid" Grid.Row="4" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350" Margin="10,10,10,10"/>
-                    <Grid Name="VisualSettingsEditorGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500">
+                    <Grid Name="VisualSettingsEditorGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500" Margin="10,10,10,10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
@@ -659,21 +659,45 @@
                             StaysOpenOnEdit="True"
                             c:OnlyValuesInList="True"/>
                         <Label Content="Special Effect 1" Grid.Row="3" Grid.Column="0" Margin="10,5,10,5"/>
-                        <TextBox Name="SpecialEffect1Txt" Grid.Row="3" Grid.Column="1" Margin="10,5,10,5" MinWidth="50"/>
+                        <TextBox Name="SpecialEffect1Txt" Grid.Row="3" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
                         <Label Content="Special Effect 2" Grid.Row="4" Grid.Column="0" Margin="10,5,10,5"/>
-                        <TextBox Name="SpecialEffect2Txt" Grid.Row="4" Grid.Column="1" Margin="10,5,10,5" MinWidth="50"/>
+                        <TextBox Name="SpecialEffect2Txt" Grid.Row="4" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
                         <Label Content="Special Effect 3" Grid.Row="5" Grid.Column="0" Margin="10,5,10,5"/>
-                        <TextBox Name="SpecialEffect3Txt" Grid.Row="5" Grid.Column="1" Margin="10,5,10,5" MinWidth="50"/>
+                        <TextBox Name="SpecialEffect3Txt" Grid.Row="5" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
                         <Label Content="World Effect" Grid.Row="1" Grid.Column="2" Margin="10,30,10,5"/>
-                        <TextBox Name="WorldEffectTxt" Grid.Row="1" Grid.Column="3" Margin="10,30,10,5" MinWidth="50"/>
+                        <TextBox Name="WorldEffectTxt" Grid.Row="1" Grid.Column="3" Margin="10,30,10,5" MinWidth="150"/>
                         <Label Content="Sound Id" Grid.Row="2" Grid.Column="2" Margin="10,5,10,5"/>
-                        <TextBox Name="SoundIdTxt" Grid.Row="2" Grid.Column="3" Margin="10,5,10,5" MinWidth="50"/>
+                        <TextBox Name="SoundIdTxt" Grid.Row="2" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
                         <Label Content="Shake Id" Grid.Row="3" Grid.Column="2" Margin="10,5,10,5"/>
-                        <TextBox Name="ShakeIdTxt" Grid.Row="3" Grid.Column="3" Margin="10,5,10,5" MinWidth="50"/>
+                        <TextBox Name="ShakeIdTxt" Grid.Row="3" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
                         <Label Content="Flags" Grid.Row="4" Grid.Column="2" Margin="10,5,10,5"/>
-                        <TextBox Name="VisualFlagsTxt" Grid.Row="4" Grid.Column="3" Margin="10,5,10,5" MinWidth="50"/>
+                        <TextBox Name="VisualFlagsTxt" Grid.Row="4" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
                     </Grid>
-                    <Grid Name="VisualKitEffectEditorGrid" Grid.Row="3" Grid.RowSpan="2" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500">
+                    <Grid Name="VisualKitEffectEditorGrid" Grid.Row="3" Grid.RowSpan="2" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500" Margin="10,10,10,10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Name" Grid.Row="0" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="VisualEffectNameTxt" Grid.Row="0" Grid.Column="1" Margin="10,5,10,5" MinWidth="350"/>
+                        <Label Content="File Path" Grid.Row="1" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="VisualEffectFilePathTxt" Grid.Row="1" Grid.Column="1" Margin="10,5,10,5" MinWidth="350"/>
+                        <Label Content="Area Efect Size" Grid.Row="2" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="VisualEffectAreaEffectSizeTxt" Grid.Row="2" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
+                        <Label Content="Scale" Grid.Row="3" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="VisualEffectScaleTxt" Grid.Row="3" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
+                        <Label Content="Minimum Allowed Scale" Grid.Row="4" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="VisualEffectMinAllowedScaleTxt" Grid.Row="4" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
+                        <Label Content="Maximum Allowed Scale" Grid.Row="5" Grid.Column="0" Margin="10,5,10,5"/>
+                        <TextBox Name="VisualEffectMaxAllowedScaleTxt" Grid.Row="5" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
                     </Grid>
                 </Grid>
             </TabItem>
