--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -618,13 +618,16 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-
                     <Label Content="Selected Visual ID" Grid.Row="0" Grid.Column="0" Margin="5,5,0,0" FontSize="16"/>
                     <Label Name="SelectedVisualPath" Grid.Row="0" Grid.Column="1" Margin="0,5,0,5" FontSize="16"/>
-                    <Label Content="Visual Kits" Grid.Row="1" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Center"/>
-                    <Grid Name="VisualSettingsGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350" Margin="10,40,10,10"/>
-                    <Label Content="Visual Kit Effects" Grid.Row="3" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Center"/>
-                    <Grid Name="VisualEffectsListGrid" Grid.Row="4" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350" Margin="10,10,10,10"/>
+                    <Label Content="Visual Kits (right click a row for operations)" Grid.Row="1" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Left"/>
+                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350" Margin="10,30,10,10" BorderBrush="LightCyan" BorderThickness="2">
+                        <Grid Name="VisualSettingsGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350"/>
+                    </Border>
+                    <Label Content="Visual Kit Effects (right click a row for operations)" Grid.Row="3" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Left"/>
+                    <Border Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350" Margin="10,30,10,10" BorderBrush="LightCyan" BorderThickness="2">
+                        <Grid Name="VisualEffectsListGrid" Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350"/>
+                    </Border>
                     <Grid Name="VisualSettingsEditorGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500" Margin="10,10,10,10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
